[gd_scene load_steps=11 format=3 uid="uid://cwepdqsupx0hw"]

[ext_resource type="Texture2D" uid="uid://ph58hdih3cmf" path="res://asset/items_spritesheet.png" id="1_nsjf6"]
[ext_resource type="Script" path="res://player/bomb.gd" id="1_w1nix"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6as0y"]
atlas = ExtResource("1_nsjf6")
region = Rect2(440, 444, 55, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_e07i5"]
radius = 25.5539

[sub_resource type="Curve" id="Curve_1biwe"]
max_value = 3.0
_data = [Vector2(0.0661157, 0.791209), 0.0, 0.0, 0, 0, Vector2(0.458678, 1.71429), 0.0, 0.0, 0, 0, Vector2(1, 2.10989), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kb55b"]
curve = SubResource("Curve_1biwe")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sdjt5"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
angle_max = 720.0
spread = 180.0
flatness = 0.08
initial_velocity_min = 200.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
scale_over_velocity_curve = SubResource("CurveTexture_kb55b")

[sub_resource type="AtlasTexture" id="AtlasTexture_q3j28"]
atlas = ExtResource("1_nsjf6")
region = Rect2(23, 458, 22, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_24myy"]
radius = 64.8845

[sub_resource type="CircleShape2D" id="CircleShape2D_rh7o1"]
radius = 77.3692

[node name="Bomb" type="RigidBody2D"]
collision_layer = 0
collision_mask = 17
script = ExtResource("1_w1nix")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_6as0y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_e07i5")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_sdjt5")
texture = SubResource("AtlasTexture_q3j28")
lifetime = 0.3
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_24myy")

[node name="EnemyDetect" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetect"]
shape = SubResource("CircleShape2D_rh7o1")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="finished" from="GPUParticles2D" to="." method="bomb_finish"]
[connection signal="body_entered" from="Area2D" to="." method="bomb_enemy"]
[connection signal="body_entered" from="EnemyDetect" to="." method="_on_enemy_detect_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
